--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "@nrwl/nx-cloud": "15.0.3",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
-    "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
-    "@vue/cli-service": "4.5.13",
+    "@vue/cli-plugin-eslint": "5.0.8",
+    "@vue/cli-service": "5.0.8",
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0",
     "express": "^4.17.1",
