--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -24,7 +24,7 @@
     "@elvia/elvis-colors": "^1.8.0",
     "@elvia/elvis-typography": "^2.3.2",
     "bootstrap": "4.6.1",
-    "jquery": "1.9.1 - 3",
+    "jquery": "^3.6.4",
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
